--- a/XML/XML/TODO.txt
+++ b/XML/XML/TODO.txt
@@ -1,4 +1,6 @@
 TODO  LIST:
+	restructuring the way we accept the xml file, will use an xmlreader to try and parse through the elemenets which
+	does allow us to perform conversion of the string before sending it to the dictionary
 	(RESOLVED)Ensure different XML files will behave in same manner
 		Note: If all xml's have the same element id there should be no issue populating any given inspection form tempalte
 	(RESOLVED)Populate the fields in the next block of items
@@ -7,6 +9,7 @@ TODO  LIST:
 		Will have to map out each page and the XML values it wants
 	
 	Bugs:
+	
 	(RESOLVED)does not work with a second xml, exception errors suggest the second inspection xml has a different starting index
 		Notes: This error I originally got when I started with the first XML, this was resolved using a starting index of 0
 		however I do not yet fully understand the context of why this works.
